# stella-hs

./: .gitignore  Makefile  README.md  bnfc_help  stella-hs.cabal
exe/: Main.hs
src/Stella/: Check.hs
src/Stella/Ast/: AbsSyntax.hs  LexSyntax.x  ParSyntax.y  PrintSyntax.hs
src/Stella/Check/: Constraints.hs  Env.hs  Errors.hs  Exhaustiveness.hs  Trans.hs  Types.hs  Utils.hs
test/: Main.hs
test/playground/: main.st
