cabal-version:      3.4
name:               stella-hs
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Nikolay Rulev
maintainer:         nikolayr2001@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-source-files:
    Syntax.cf
    src/Stella/Ast/Lexer.x
    src/Stella/Ast/Parser.y

common common-setup
    ghc-options: -Wall
    default-extensions:
        DuplicateRecordFields
        OverloadedRecordDot
        LambdaCase
        OverloadedStrings
        RecordWildCards
        ViewPatterns

library
    import:           common-setup
    exposed-modules:
        Stella.Ast.AbsSyntax
        Stella.Ast.LexSyntax
        Stella.Ast.ParSyntax
        Stella.Ast.PrintSyntax
        Stella.Check.Trans
        Stella.Check.Errors
        Stella.Check.Types
        Stella.Check.Env
        Stella.Check
    build-tool-depends:
        alex:alex,
        happy:happy
    build-depends:
        base ^>=4.16.4.0,
        text,
        array,
        containers,
        transformers,
        mtl,
        pretty-simple
    hs-source-dirs:   src
    default-language: GHC2021

executable stella-hs
    import:           common-setup
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        text,
        pretty-simple,
        stella-hs

    hs-source-dirs:   exe
    default-language: GHC2021

test-suite stella-hs-test
    import:           common-setup
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        stella-hs,
        directory,
        text,
        tasty,
        tasty-hunit
